# lambda-sns

./: .gitignore  .pre-commit-config.yaml  lambda_function.py  pyproject.toml  test_lambda_function.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: cdk-ci.yml  ci.yml
cdk-infra/: .gitignore  .yarnrc.yml  biome.json  cdk.json  package.json  tsconfig.json
cdk-infra/lib/: cdk-infra-stack.ts
cdk-infra/test/: cdk-infra.test.ts
